src/grammar/.antlr/FppParser.java
// Generated from /home/tumbar/git/fpp/src/grammar/Fpp.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, PRIM_TYPE=17, 
		INT_TYPE=18, NL=19, WS=20, WS_NL=21, COMMENT=22, ANNOTATION=23, LIT_BOOLEAN=24, 
		LIT_STRING=25, LIT_FLOAT=26, LIT_INT=27, U8=28, I8=29, U16=30, I16=31, 
		U32=32, I32=33, U64=34, I64=35, F32=36, F64=37, ACTIVE=38, ACTIVITY=39, 
		ALWAYS=40, ARRAY=41, ASSERT=42, ASYNC=43, AT=44, BASE=45, BLOCK=46, BOOL=47, 
		CHANGE=48, COMMAND=49, COMPONENT=50, CONNECTIONS=51, CONSTANT=52, CPU=53, 
		DEFAULT=54, DIAGNOSTIC=55, DROP=56, ENUM=57, EVENT=58, FALSE=59, FATAL=60, 
		FORMAT=61, GET=62, GUARDED=63, HEALTH=64, HIGH=65, ID=66, IMPORT=67, INCLUDE=68, 
		INPUT=69, INSTANCE=70, INTERNAL=71, LOCATE=72, LOW=73, MATCH=74, MODULE=75, 
		ON=76, OPCODE=77, ORANGE=78, OUTPUT=79, PARAM=80, PASSIVE=81, PHASE=82, 
		PORT=83, PRIORITY=84, PRIVATE=85, QUEUE=86, QUEUED=87, RECV=88, RED=89, 
		REF=90, REG=91, RESP=92, SAVE=93, SERIAL=94, SET=95, SEVERITY=96, SIZE=97, 
		STACK=98, STRING=99, STRUCT=100, SYNC=101, TELEMETRY=102, TEXT=103, THROTTLE=104, 
		TIME=105, TOPOLOGY=106, TRUE=107, TYPE=108, UPDATE=109, WARNING=110, WITH=111, 
		YELLOW=112, IDENTIFIER=113;
	public static final int
		RULE_prog = 0, RULE_abstractTypeDecl = 1, RULE_arrayDecl = 2, RULE_constantDecl = 3, 
		RULE_structMember = 4, RULE_structMemberN = 5, RULE_structMemberL = 6, 
		RULE_structDecl = 7, RULE_queueFullBehavior = 8, RULE_commandKind = 9, 
		RULE_commandDecl = 10, RULE_paramDecl = 11, RULE_generalPortKind = 12, 
		RULE_specialPortKind = 13, RULE_generalPortInstanceType = 14, RULE_generalPortInstanceDecl = 15, 
		RULE_specialPortInstanceDecl = 16, RULE_telemetryLimitKind = 17, RULE_telemetryLimitExpr = 18, 
		RULE_telemetryLimit = 19, RULE_telemetryUpdate = 20, RULE_telemetryChannelDecl = 21, 
		RULE_enumMember = 22, RULE_enumMemberN = 23, RULE_enumMemberL = 24, RULE_enumDecl = 25, 
		RULE_eventSeverity = 26, RULE_eventDecl = 27, RULE_includeStmt = 28, RULE_matchStmt = 29, 
		RULE_internalPortDecl = 30, RULE_initSpecifier = 31, RULE_componentInstanceDecl = 32, 
		RULE_componentKind = 33, RULE_componentMemberTempl = 34, RULE_componentMember = 35, 
		RULE_componentDecl = 36, RULE_portDecl = 37, RULE_componentInstanceSpec = 38, 
		RULE_connectionNode = 39, RULE_connection = 40, RULE_directGraphDecl = 41, 
		RULE_patternKind = 42, RULE_patternGraphSources = 43, RULE_patternGraphStmt = 44, 
		RULE_topologyImportStmt = 45, RULE_topologyMemberTempl = 46, RULE_topologyMember = 47, 
		RULE_topologyDecl = 48, RULE_locationKind = 49, RULE_locationStmt = 50, 
		RULE_moduleMemberTempl = 51, RULE_moduleMember = 52, RULE_moduleDecl = 53, 
		RULE_formalParameter = 54, RULE_formalParameterN = 55, RULE_formalParamaterL = 56, 
		RULE_formalParameterList = 57, RULE_qualIdent = 58, RULE_primitiveType = 59, 
		RULE_typeName = 60, RULE_commaDelim = 61, RULE_semiDelim = 62, RULE_arrayExpr = 63, 
		RULE_structAssignment = 64, RULE_structExpr = 65, RULE_expr = 66, RULE_annotation = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "abstractTypeDecl", "arrayDecl", "constantDecl", "structMember", 
			"structMemberN", "structMemberL", "structDecl", "queueFullBehavior", 
			"commandKind", "commandDecl", "paramDecl", "generalPortKind", "specialPortKind", 
			"generalPortInstanceType", "generalPortInstanceDecl", "specialPortInstanceDecl", 
			"telemetryLimitKind", "telemetryLimitExpr", "telemetryLimit", "telemetryUpdate", 
			"telemetryChannelDecl", "enumMember", "enumMemberN", "enumMemberL", "enumDecl", 
			"eventSeverity", "eventDecl", "includeStmt", "matchStmt", "internalPortDecl", 
			"initSpecifier", "componentInstanceDecl", "componentKind", "componentMemberTempl", 
			"componentMember", "componentDecl", "portDecl", "componentInstanceSpec", 
			"connectionNode", "connection", "directGraphDecl", "patternKind", "patternGraphSources", 
			"patternGraphStmt", "topologyImportStmt", "topologyMemberTempl", "topologyMember", 
			"topologyDecl", "locationKind", "locationStmt", "moduleMemberTempl", 
			"moduleMember", "moduleDecl", "formalParameter", "formalParameterN", 
			"formalParamaterL", "formalParameterList", "qualIdent", "primitiveType", 
			"typeName", "commaDelim", "semiDelim", "arrayExpr", "structAssignment", 
			"structExpr", "expr", "annotation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'['", "']'", "':'", "'{'", "'}'", "'->'", "'('", "')'", 
			"'.'", "','", "';'", "'-'", "'*'", "'/'", "'+'", null, null, null, null, 
			null, null, null, null, null, null, null, "'U8'", "'I8'", "'U16'", "'I16'", 
			"'U32'", "'I32'", "'U64'", "'I64'", "'F32'", "'F64'", "'active'", "'activity'", 
			"'always'", "'array'", "'assert'", "'async'", "'at'", "'base'", "'block'", 
			"'bool'", "'change'", "'command'", "'component'", "'connections'", "'constant'", 
			"'cpu'", "'default'", "'diagnostic'", "'drop'", "'enum'", "'event'", 
			"'false'", "'fatal'", "'format'", "'get'", "'guarded'", "'health'", "'high'", 
			"'id'", "'import'", "'include'", "'input'", "'instance'", "'internal'", 
			"'locate'", "'low'", "'match'", "'module'", "'on'", "'opcode'", "'orange'", 
			"'output'", "'param'", "'passive'", "'phase'", "'port'", "'priority'", 
			"'private'", "'queue'", "'queued'", "'recv'", "'red'", "'ref'", "'reg'", 
			"'resp'", "'save'", "'serial'", "'set'", "'severity'", "'size'", "'stack'", 
			"'string'", "'struct'", "'sync'", "'telemetry'", "'text'", "'throttle'", 
			"'time'", "'topology'", "'true'", "'type'", "'update'", "'warning'", 
			"'with'", "'yellow'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "PRIM_TYPE", "INT_TYPE", "NL", "WS", "WS_NL", 
			"COMMENT", "ANNOTATION", "LIT_BOOLEAN", "LIT_STRING", "LIT_FLOAT", "LIT_INT", 
			"U8", "I8", "U16", "I16", "U32", "I32", "U64", "I64", "F32", "F64", "ACTIVE", 
			"ACTIVITY", "ALWAYS", "ARRAY", "ASSERT", "ASYNC", "AT", "BASE", "BLOCK", 
			"BOOL", "CHANGE", "COMMAND", "COMPONENT", "CONNECTIONS", "CONSTANT", 
			"CPU", "DEFAULT", "DIAGNOSTIC", "DROP", "ENUM", "EVENT", "FALSE", "FATAL", 
			"FORMAT", "GET", "GUARDED", "HEALTH", "HIGH", "ID", "IMPORT", "INCLUDE", 
			"INPUT", "INSTANCE", "INTERNAL", "LOCATE", "LOW", "MATCH", "MODULE", 
			"ON", "OPCODE", "ORANGE", "OUTPUT", "PARAM", "PASSIVE", "PHASE", "PORT", 
			"PRIORITY", "PRIVATE", "QUEUE", "QUEUED", "RECV", "RED", "REF", "REG", 
			"RESP", "SAVE", "SERIAL", "SET", "SEVERITY", "SIZE", "STACK", "STRING", 
			"STRUCT", "SYNC", "TELEMETRY", "TEXT", "THROTTLE", "TIME", "TOPOLOGY", 
			"TRUE", "TYPE", "UPDATE", "WARNING", "WITH", "YELLOW", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Fpp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> EOF() { return getTokens(FppParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(FppParser.EOF, i);
		}
		public List<TerminalNode> NL() { return getTokens(FppParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(FppParser.NL, i);
		}
		public List<ModuleMemberContext> moduleMember() {
			return getRuleContexts(ModuleMemberContext.class);
		}
		public ModuleMemberContext moduleMember(int i) {
			return getRuleContext(ModuleMemberContext.class,i);
		}
		public List<SemiDelimContext> semiDelim() {
			return getRuleContexts(SemiDelimContext.class);
		}
		public SemiDelimContext semiDelim(int i) {
			return getRuleContext(SemiDelimContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(136);
					match(NL);
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(142);
					moduleMember();
					setState(145);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__11:
					case NL:
						{
						setState(143);
						semiDelim();
						}
						break;
					case EOF:
						{
						setState(144);
						match(EOF);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(152);
				match(NL);
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbstractTypeDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode TYPE() { return getToken(FppParser.TYPE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FppParser.IDENTIFIER, 0); }
		public AbstractTypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abstractTypeDecl; }
	}

	public final AbstractTypeDeclContext abstractTypeDecl() throws RecognitionException {
		AbstractTypeDeclContext _localctx = new AbstractTypeDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_abstractTypeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(TYPE);
			setState(161);
			((AbstractTypeDeclContext)_localctx).name = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclContext extends ParserRuleContext {
		public Token name;
		public ExprContext size;
		public TypeNameContext type;
		public ArrayExprContext default_;
		public Token format;
		public TerminalNode ARRAY() { return getToken(FppParser.ARRAY, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FppParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TerminalNode DEFAULT() { return getToken(FppParser.DEFAULT, 0); }
		public TerminalNode FORMAT() { return getToken(FppParser.FORMAT, 0); }
		public ArrayExprContext arrayExpr() {
			return getRuleContext(ArrayExprContext.class,0);
		}
		public TerminalNode LIT_STRING() { return getToken(FppParser.LIT_STRING, 0); }
		public ArrayDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDecl; }
	}

	public final ArrayDeclContext arrayDecl() throws RecognitionException {
		ArrayDeclContext _localctx = new ArrayDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arrayDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(ARRAY);
			setState(164);
			((ArrayDeclContext)_localctx).name = match(IDENTIFIER);
			setState(165);
			match(T__0);
			setState(166);
			match(T__1);
			setState(167);
			((ArrayDeclContext)_localctx).size = expr(0);
			setState(168);
			match(T__2);
			setState(169);
			((ArrayDeclContext)_localctx).type = typeName();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEFAULT) {
				{
				setState(170);
				match(DEFAULT);
				setState(171);
				((ArrayDeclContext)_localctx).default_ = arrayExpr();
				}
			}

			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FORMAT) {
				{
				setState(174);
				match(FORMAT);
				setState(175);
				((ArrayDeclContext)_localctx).format = match(LIT_STRING);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDeclContext extends ParserRuleContext {
		public Token name;
		public ExprContext value;
		public TerminalNode CONSTANT() { return getToken(FppParser.CONSTANT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FppParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConstantDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDecl; }
	}

	public final ConstantDeclContext constantDecl() throws RecognitionException {
		ConstantDeclContext _localctx = new ConstantDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constantDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(CONSTANT);
			setState(179);
			((ConstantDeclContext)_localctx).name = match(IDENTIFIER);
			setState(180);
			match(T__0);
			setState(181);
			((ConstantDeclContext)_localctx).value = expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructMemberContext extends ParserRuleContext {
		public Token name;
		public ExprContext size;
		public TypeNameContext type;
		public Token format;
		public TerminalNode IDENTIFIER() { return getToken(FppParser.IDENTIFIER, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TerminalNode FORMAT() { return getToken(FppParser.FORMAT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LIT_STRING() { return getToken(FppParser.LIT_STRING, 0); }
		public StructMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structMember; }
	}

	public final StructMemberContext structMember() throws RecognitionException {
		StructMemberContext _localctx = new StructMemberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structMember);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			((StructMemberContext)_localctx).name = match(IDENTIFIER);
			setState(184);
			match(T__3);
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(185);
				match(T__1);
				setState(186);
				((StructMemberContext)_localctx).size = expr(0);
				setState(187);
				match(T__2);
				}
			}

			setState(191);
			((StructMemberContext)_localctx).type = typeName();
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FORMAT) {
				{
				setState(192);
				match(FORMAT);
				setState(193);
				((StructMemberContext)_localctx).format = match(LIT_STRING);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructMemberNContext extends ParserRuleContext {
		public StructMemberContext structMember() {
			return getRuleContext(StructMemberContext.class,0);
		}
		public CommaDelimContext commaDelim() {
			return getRuleContext(CommaDelimContext.class,0);
		}
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public StructMemberNContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structMemberN; }
	}
